--- a/src/main/resources/templates/streaming.html
+++ b/src/main/resources/templates/streaming.html
@@ -10,12 +10,13 @@
 <header th:replace="base :: header"></header>
 
 <main class="streaming-section">
-    <h2>Streaming with IP cam 이름</h2>
+    <h2>Streaming with IP cam: <span th:text="${username}">이름</span></h2> <!-- 인증된 사용자 이름 표시 -->
 
     <div class="video-stream">
         <video id="stream" width="640" height="360" controls>
             <!-- 임시 비디오 URL -->
             <source th:src="@{https://www.w3schools.com/html/mov_bbb.mp4}" type="video/mp4">
+            <source th:src="@{${videoUrl}}" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
@@ -29,7 +30,17 @@
         <button id="rotate-down">아래회전</button>
     </div>
 </main>
-<script th:src="@{/js/script.js}"></script>
-</body>
 
+<script th:src="@{/js/oauth.js}"></script>
+<script th:src="@{/js/script.js}"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        // 페이지가 로드되었을 때 특정 요청을 보내려면 여기에 추가
+        httpRequest('GET', '/authenticated', null, function(response) {
+            console.log("성공 응답"+response)
+        });
+    });
+</script>
+
+</body>
 </html>
