--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -3,9 +3,10 @@
 <head th:fragment="head">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title th:text="${title}">Default Title</title>
+    <title th:text="${title}">IP CAM 이름/웹 사이트 이름</title>
     <link rel="stylesheet" th:href="@{/css/header.css}" />
     <link rel="stylesheet" th:href="@{/css/main.css}" />
+    <script th:src="@{/js/modal.js}"></script>
 </head>
 <body>
 <header th:fragment="header">
@@ -20,24 +21,31 @@
             <li><a th:href="@{/report}" th:classappend="${page == 'report'} ? 'active' : ''">Report</a></li>
         </ul>
     </nav>
-    <div class="auth">
-        <button class="signup" id="signupBtn">회원가입</button>
-        <button class="login" onclick="window.location.href='/login'">Login</button>
+    <div class="auth-notification">
+        <div class="auth">
+            <!-- Login/Sign Up Button -->
+            <button class="login-signup" onclick="window.location.href='/login'">Login/SignUp</button>
+        </div>
+        <div class="notification">
+            <img th:src="@{/img/notification-bell.svg}" alt="Notification" class="bell-icon" onclick="toggleNotification()">
+            <div class="notification-list" id="notification-list">
+                <span class="close-btn" onclick="toggleNotification()">&times;</span>
+                <div class="notification-item empty-notification">
+                    <p>새로운 알림이 없습니다.</p>
+                </div>
+                <div class="notification-item view-more">
+                    <a th:href="@{/report}">자세히 보기</a>
+                </div>
+            </div>
+        </div>
     </div>
 </header>
 
-<div id="signupModal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>회원가입</h2>
-        <form>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username"><br><br>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password"><br><br>
-            <button type="submit">Sign Up</button>
-        </form>
-    </div>
-</div>
+<!-- Content Block -->
+<th:block th:replace="${content}"></th:block>
+
+<!-- JavaScript -->
+<script th:src="@{/js/modal.js}"></script>
+<th:block th:replace="${extra_js}"></th:block>
 </body>
 </html>
