--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,8 @@
 <div class="main-content">
     <h2>Start with IP Cam 이름</h2>
     <div class="buttons">
-        <a th:href="@{/streaming}">Move to my video</a>
-        <a class="recorded-link" th:href="@{/video}">Recorded video</a>
+        <a href="/streaming" class="custom-btn">Move to my video</a>
+        <a href="/video" class="custom-btn">Recorded video</a>
     </div>
 </div>
 <script th:src="@{/js/modal.js}"></script>
