[Deploy] Deploy 오류 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
     <div class="buttons">
         <a href="/streaming" class="custom-btn">Move to my video</a>
         <a href="/video" class="custom-btn">Recorded video</a>
+        <a href="/qr/generate?deviceCode=123456" class="custom-btn">QR 코드 생성하기</a>
     </div>
 </div>
 <script th:src="@{/js/modal.js}"></script>
