--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -1,8 +1,14 @@
 :root {
+    --background-color: #1e0e62; /* 진한 보라색 */
     --action-primary: #25dac5;
-    --colors-heading: #1e0e62;
-    --colors-text: #151439;
+    --colors-heading: #ffffff;
+    --colors-text: #ffffff;
     --colors-white: #ffffff;
+}
+
+body {
+    background-color: var(--background-color);
+    color: var(--colors-text);
 }
 
 header {
@@ -49,18 +55,23 @@ header {
     gap: 5px;
 }
 
-.auth button {
+/* Login/SignUp 및 MyPage 버튼 스타일 */
+.auth .login-signup,
+.auth .mypage-btn {
     padding: 8px 15px;
-    border-radius: 20px;
-    border: none;
-    cursor: pointer;
-}
-
-.auth .login-signup {
     background-color: var(--action-primary);
     color: var(--colors-white);
     border-radius: 20px;
-    margin: 0;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+.auth .login-signup:hover,
+.auth .mypage-btn:hover {
+    background-color: #1ca69b;
 }
 
 .notification {
@@ -142,16 +153,26 @@ header {
 
 .close-btn:hover {
     color: #333;
-
+}
 
 /* Google Login Button */
 .google-login-btn {
-  background: none;
-  border: none;
-  cursor: pointer;
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 
 .google-login-btn img {
-  width: 100%;
-  max-width: 200px;
+    width: 100%;
+    max-width: 200px;
+}
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo-image {
+    max-height: 60px; /* 로고 이미지의 최대 높이를 설정 */
+    margin-right: 15px; /* 텍스트와 로고 사이의 여백 */
+    vertical-align: middle;
 }
