--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,72 +1,123 @@
-/* 메인 콘텐츠 중앙 정렬 */
+:root {
+    --background-color: #2F1893;
+    --action-primary: #25dac5;
+    --colors-heading: #ffffff;
+    --colors-text: #ffffff;
+    --colors-white: #ffffff;
+    --box-shadow-color: rgba(0, 0, 0, 0.15);
+}
+
+body {
+    background-color: var(--background-color);
+    color: var(--colors-text);
+    margin: 50px;
+    padding: 10px;
+    font-family: Arial, sans-serif;
+}
+
+.content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 90px;
+    height: calc(100vh - 80px);
+    gap: 100px;
+}
+
+.alarm-list {
+    width: 400px;
+    height=500px;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 8px 16px var(--box-shadow-color);
+    color: #333333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.alarm-list h3 {
+    font-size: 24px;
+    color: var(--background-color);
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+#alarm-container {
+    width: 100%;
+    max-height: 300px;
+    overflow-y: auto;
+    padding: 10px 0;
+    margin-bottom: 20px;
+    border-top: 1px solid #ddd;
+    text-align: left;
+    color: #555;
+}
+
+.custom-btn.update-btn {
+    background-color: var(--action-primary);
+    color: var(--colors-white);
+    border-radius: 20px;
+    text-align: center;
+    font-size: 16px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 80%;
+    margin-top: 300px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+}
+
+.custom-btn.update-btn:hover {
+    background-color: #1ca69b;
+}
+
+.reload-icon {
+    width: 16px;
+    height: 16px;
+    filter: brightness(0) invert(1);
+}
+
 .main-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 80px); /* 헤더 높이를 제외한 나머지 화면에서 중앙 정렬 */
+    width: 60%;
     text-align: center;
-    margin: 0 auto;
+    color: var(--colors-heading);
+    margin-top: -110px;
 }
 
-/* 제목 스타일 */
 .main-content h2 {
-    font-size: 48px;
+    font-size: 75px;
     color: var(--colors-heading);
+    margin-bottom: 50px;
 }
 
-/* 버튼 컨테이너 */
 .main-content .buttons {
-    margin-top: 30px;
+    display: flex;
+    flex-direction: column; /* 버튼을 세로로 배치 */
+    gap: 20px; /* 버튼 간 간격 */
 }
 
-/* a 태그를 버튼처럼 스타일링 */
 .main-content .buttons a {
-    display: inline-block;
-    margin: 10px auto;
     padding: 15px 20px;
     background-color: var(--action-primary);
     color: var(--colors-white);
     border-radius: 40px;
     text-decoration: none;
     font-size: 18px;
-    width: 50%;
-    max-width: 300px;
+    max-width: 200px;
     text-align: center;
 }
 
-/* 버튼 hover 상태 */
 .main-content .buttons a:hover {
-    background-color: #1ca69b;
-}
-
-
-.recorded-link {
-    display: block;
-    margin-top: 10px;
-    font-size: 16px;
-    color: var(--colors-heading);
-    text-decoration: none;
-    text-align: center;
-}
-
-.recorded-link:hover {
-    color: var(--action-primary);
-}
-.custom-btn {
-    display: block;
-    margin: 10px auto;
-    padding: 15px 20px;
-    background-color: var(--action-primary);
-    color: var(--colors-white);
-    border-radius: 40px;
-    text-decoration: none;
-    font-size: 18px;
-    width: 50%;
-    max-width: 300px;
-    text-align: center;
-}
-
-.custom-btn:hover {
     background-color: #1ca69b;
 }
