--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -26,7 +26,7 @@ body {
 
 .alarm-list {
     width: 400px;
-    height=500px;
+    height: 500px;
     background-color: #ffffff;
     padding: 20px;
     border-radius: 15px;
