--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/main.css}" />
     <link rel="stylesheet" th:href="@{/css/video.css}" />
     <link rel="stylesheet" th:href="@{/css/streaming.css}" />
-    <link rel="stylesheet" th:href="@{/css/report.css}" />
+    <link rel="stylesheet" th:href="@{/css/statistics.css}" />
     <link rel="stylesheet" th:href="@{/css/mypage.css}" />
     <!-- Flatpickr CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
