--- a/src/main/resources/templates/statistics.html
+++ b/src/main/resources/templates/statistics.html
@@ -9,7 +9,7 @@
 <main class="report-section">
   <h1>Dashboard Report</h1>
 
-  <iframe src="http://3.38.149.191:5601/app/dashboards#/view/b4172200-9a54-11ef-b639-4508448ddfc8?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-1h%2Cto%3Anow))&show-time-filter=true&hide-filter-bar=true" height="600" width="1400"></iframe>
+  <iframe src="http://3.38.149.191:5601/app/dashboards#/view/6d702d80-b082-11ef-b639-4508448ddfc8?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-1d%2Cto%3Anow))&show-top-menu=true&show-query-input=true&show-time-filter=true" height="700" width="1280"></iframe>
 </main>
 
 </body>
